--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <a
               id="profile-link"
-              href="https://codepen.io/dashboard?type=view&amp;opts_itemType=pen&amp;opts_filter=all&amp;opts_orderBy=id&amp;opts_orderDirection=0&amp;opts_tag=0&amp;displayType=grid&amp;previewType=iframe&amp;page=0"
+              href="https://codepen.io/harsukhdeol/"
               >View Projects</a
             >
           </div>
